<resources>
    <string name="app_name">MessageApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_accounts">Already have an accounts?</string>
</resources>