<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6290C8"
        tools:context=".view.SignUp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/select"
            tools:ignore="ContentDescription" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImage"
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <EditText
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/surname"
            app:layout_constraintEnd_toEndOf="@+id/surname"
            app:layout_constraintStart_toStartOf="@+id/surname"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="HardcodedText"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/surname"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/register"
            app:layout_constraintEnd_toEndOf="@+id/register"
            app:layout_constraintStart_toStartOf="@+id/register"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="27dp"
            android:background="@drawable/custom_register_button"
            android:text="@string/register"
            app:layout_constraintBottom_toTopOf="@+id/goToLogin"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="134dp"
            android:text="@string/already_have_an_accounts"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/register"
            app:layout_constraintTop_toBottomOf="@+id/register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>